--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 				<div class="icon tel"></div>
 			</div>
 		</div>
-		<div class="banner" id="banner"></div>
+		<div class="banner clear" id="banner"></div>
 		<!-- 标志 -->
-		<div class="nav">
-			<div class="navWidth">
-					<div class="nav_width">
+		<div class="nav clear">
+			<div class="navWidth clear">
+					<div class="nav_width clear">
 						<div class="navLeft clear">
 						<div class="navHt clear">
 							<div class="navText">品牌</div>
@@ -77,7 +77,7 @@
 						</div>
 					</div>
 
-					<div class="navLeft clear">
+					<div class="navCenter clear">
 						<div class="navHt clear">
 							<div class="navText">车型</div>
 							<div class="navIcn"></div>
@@ -116,7 +116,7 @@
 
 					<div class="navRight clear">
 						<div class="navRight_text">价格</div>
-						<div class="navRight_year">
+						<div class="navRight_year clear">
 							<a href="" class="navRight_item">8万以下</a>
 							<a href="" class="navRight_item">8-10万</a>
 							<a href="" class="navRight_item">10-15万</a>
@@ -140,7 +140,54 @@
 			<div class="product">
 				<h1>经营的智慧，我们让您领先一步</h1>
 				<p>大风车和车牛，助您提升经营效率</p>
-			</div>
+
+				<div class="splitRight">
+					<div class="splitRight_width">
+						<div class="splitItem clear">
+							<img class="splitImg" src="./image/f958bfd6.png" width="64px"; height="64px" />
+							<div class="splitTop clear">
+								<p class="splitP">弹个车</p>
+								<p class="splitSub">面向消费者</p>
+							</div>
+							<div class="split_title">
+								<p class="splitTitle">基于消费者个人信用提供超低首付、超长分期，灵活智选的汽车融资租赁个性化解决方案</p>
+								<p class="splitTitle">支持 IOS / Android</p>
+							</div>
+							<p><a href=""  class="split_a">查看更多</a></p>
+						</div>
+					</div>
+
+					<div class="splitRight_width">
+						<div class="splitItem clear">
+							<img class="splitImg" src="./image/db1b314f.png" width="64px"; height="64px" />
+							<div class="splitTop clear">
+								<p class="splitP">大风车</p>
+								<p class="splitSub">面向拥有展厅和销售团队的大车商</p>
+							</div>
+							<div class="split_title">
+								<p class="splitTitle">评估管理、车辆管理、客户管理、经营数据......一应俱全</p>
+								<p class="splitTitle">支持 IOS / Android / PC 端</p>
+							</div>
+							<p><a href=""  class="split_a">查看更多</a></p>
+						</div>
+					</div>
+
+					<div class="splitRight_width">
+						<div class="splitItems clear">
+							<img class="splitImg" src="./image/50c62d1a9.png" width="64px"; height="64px" />
+							<div class="splitTop clear">
+								<p class="splitP">车牛</p>
+								<p class="splitSub">面向经营二手车的中小车商</p>
+							</div>
+							<div class="split_title">
+								<p class="splitTitle">收车、卖车、贷款、质保、估价......一步到位</p>
+								<p class="splitTitle">支持 IOS / Android</p>
+							</div>
+							<p><a href=""  class="split_a">查看更多</a></p>
+						</div>
+					</div>
+				</div>
+			</div>		
 		</div>
 		
 		<!-- 底部 -->
