--- a/accidentVehicle.html
+++ b/accidentVehicle.html
@@ -193,15 +193,15 @@
 				<div class="bottomNav_top clear">
 					<div class="bottomNav_top_one">
 						<a class="title">导购大全</a>
-						<a href="" class="art_link">城市大全</a>
-						<a href="" class="art_link">品牌大全</a>
-						<a href="" class="art_link">车系大全</a>
+						<a href="CityEncyclopedia.html" class="art_link">城市大全</a>
+						<a href="brand.html" class="art_link">品牌大全</a>
+						<a href="car.html" class="art_link">车系大全</a>
 					</div>
 					<div class="bottomNav_top_two">
 						<a class="title">购车指南</a>
-						<a href="" class="art_link">如何挑选二手车</a>
-						<a href="" class="art_link">如何判断事故火烧水浸车</a>
-						<a href="" class="art_link">二手车指标说明</a>
+						<a href="accidentVehicle.html" class="art_link">如何挑选二手车</a>
+						<a href="accident.html" class="art_link">如何判断事故火烧水浸车</a>
+						<a href="used.html" class="art_link">二手车指标说明</a>
 					</div>
 					<div class="bottomNav_top_there">
 						<a class="title">关于我们</a>
